= Changelog

== `0.0.1.0`

* API
  ** Add user `id` to `/login` response.
  ** Improve `/profile` route.
* Frontend
  ** Add user `id` to localStorage.
  ** Add drop-down wrapper for "Sign out" including additional information.

== `0.0.0.0`

* Initial release.